--- a/site/storyboard/storyboard.css
+++ b/site/storyboard/storyboard.css
@@ -1,5 +1,5 @@
 .step {
-  border: 5px solid chartreuse;
+  border: 5px solid lightblue;
   border-radius: 6px;
   background: aliceblue;
 }
@@ -7,3 +7,8 @@
 #Overview.step {
   background: indigo;
 }
+
+.smartdown-outer-container.flatten-vertical #Overview.step.loading {
+  display: none;
+}
+
